--- a/Meta/Templates/BehaviorPartial.tt
+++ b/Meta/Templates/BehaviorPartial.tt
@@ -1,13 +1,13 @@
 <#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ assembly name="Meta" #>
-<#@ include file="templates\\autogen_notice.txt" #>
+<#@ include file="Templates/Snippets/autogen_notice.txt" #>
 
 namespace <#= behavior.Namespace #>
 {
     public partial class <#= behavior.ClassName #>
     {
-        <#@ include file="templates\\ComponentIndex.txt" #>
-        <#@ include file="templates\\BehaviorChains.txt" #>
+        <#@ include file="Templates/Snippets/ComponentIndex.txt" #>
+        <#@ include file="Templates/Snippets/BehaviorChains.txt" #>
 
 <# foreach (var adapter in adapters) { #>
         public void <#= adapter.HandlerName #>HandlerAdapter(Context ctx)
