--- a/Meta/Templates/BehaviorCode.tt
+++ b/Meta/Templates/BehaviorCode.tt
@@ -2,6 +2,7 @@
 <#@ assembly name="Meta" #>
 <#@ include file="Templates/Snippets/autogen_notice.txt" #>
 using Hopper.Utils.Chains;
+using Hopper.Core.Components;
 using Hopper.Core;
 
 namespace <#= behavior.Namespace #>
