--- a/Meta/Templates/BehaviorCode.tt
+++ b/Meta/Templates/BehaviorCode.tt
@@ -1,9 +1,8 @@
 <#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ assembly name="Meta" #>
 <#@ include file="Templates/Snippets/autogen_notice.txt" #>
-using Hopper.Utils.Chains;
-using Hopper.Core.Components;
-using Hopper.Core;
+<#@ include file="Templates/Snippets/ComponentUsings.txt" #>
+
 
 namespace <#= behavior.Namespace #>
 {
@@ -32,7 +31,7 @@ public static void <#= method.Name #>HandlerAdapter(Context ctx)
 <# /*}*/ // end foreach #>
     }
 
-    public static partial class <#= behavior.ClassName #>EntityExtensions
+    public static class <#= behavior.ClassName #>EntityExtensions
     {
 <#@ include file="Templates/Snippets/BehaviorEntityExtensions.txt" #>
     }
