--- a/Meta/Templates/ComponentCode.tt
+++ b/Meta/Templates/ComponentCode.tt
@@ -1,8 +1,7 @@
 <#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ assembly name="Meta" #>
 <#@ include file="Templates/Snippets/autogen_notice.txt" #>
-using Hopper.Core;
-using Hopper.Core.Components;
+<#@ include file="Templates/Snippets/ComponentUsings.txt" #>
 
 namespace <#= component.Namespace #>
 {
@@ -11,7 +10,7 @@ namespace <#= component.Namespace #>
 <#@ include file="Templates/Snippets/ComponentIndex.txt" #>
     }
 
-    public static partial class <#= component.ClassName #>EntityExtensions
+    public static class <#= component.ClassName #>EntityExtensions
     {
 <#@ include file="Templates/Snippets/ComponentEntityExtension.txt" #>
     }
