--- a/Meta/Templates/BehaviorCode.tt
+++ b/Meta/Templates/BehaviorCode.tt
@@ -9,6 +9,8 @@ namespace <#= behavior.Namespace #>
     {
 <#@ include file="Templates/Snippets/ComponentIndex.txt" #>
 
+<#@ include file="Templates/Snippets/ComponentConstructors.txt" #>
+
 <#@ include file="Templates/Snippets/BehaviorChains.txt" #>
 
 <#@ include file="Templates/Snippets/HandlerFromExportedMethod.txt" #>
