Factory Initialization, injection constructors and more

--- a/Meta/Templates/ComponentCode.tt
+++ b/Meta/Templates/ComponentCode.tt
@@ -11,6 +11,8 @@ namespace <#= component.Namespace #>
 
 <#@ include file="Templates/Snippets/ComponentConstructors.txt" #>
 
+<#@ include file="Templates/Snippets/ComponentAddingCopying.txt" #>
+
 <#@ include file="Templates/Snippets/HandlerFromExportedMethod.txt" #>
     }
 
