--- a/Meta/Templates/ComponentCode.tt
+++ b/Meta/Templates/ComponentCode.tt
@@ -5,7 +5,7 @@
 
 namespace <#= component.Namespace #>
 {
-    public partial class <#= component.ClassName #>
+    public partial class <#= component.ClassName #> : ICopyable
     {
 <#@ include file="Templates/Snippets/ComponentIndex.txt" #>
 
