--- a/Meta/Templates/StatStartCode.tt
+++ b/Meta/Templates/StatStartCode.tt
@@ -1,5 +1,10 @@
 <#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ assembly name="Meta" #>
 <#@ include file="Templates/Snippets/autogen_notice.txt" #>
+using Hopper.Core;
+using Hopper.Core.Components;
 
+namespace <#= Namespace #>
+{ 
 <#= statCodePrinter.TransformText() #>
+}
