--- a/Meta/Templates/AllInitCode.tt
+++ b/Meta/Templates/AllInitCode.tt
@@ -32,11 +32,11 @@ namespace <#= Namespace #>
     {
         if (!stat.IsIdentifying && !stat.IsIdentified) 
         { #>
-            <#= stat.QualifiedName #>.Index = Registry.Global.RegisterStat(<#= stat.QualifiedName #>.Default);
+            <#= stat.QualifiedName #>.Index.Id = Registry.Global.RegisterStat(<#= stat.QualifiedName #>.Default());
 <#      }
         foreach (var identifyingField in stat.staticIndentiyingFields) 
         { #>
-            <#= stat.QualifiedName #>.<#= identifyingField.name #>.Index = Registry.Global.RegisterStat(<#= stat.QualifiedName #>.<#= identifyingField.name #>.Default);
+            <#= stat.QualifiedName #>.<#= identifyingField.name #>.Index.Id = Registry.Global.RegisterStat(<#= stat.QualifiedName #>.<#= identifyingField.name #>.Default());
 <#      }
     }
 #>
