--- a/Meta/Templates/StatStartCode.tt
+++ b/Meta/Templates/StatStartCode.tt
@@ -2,6 +2,7 @@
 <#@ assembly name="Meta" #>
 <#@ include file="Templates/Snippets/autogen_notice.txt" #>
 using Hopper.Core;
+using Hopper.Core.Stat;
 using Hopper.Core.Components;
 
 namespace <#= Namespace #>
