--- a/Meta/Templates/ComponentCode.tt
+++ b/Meta/Templates/ComponentCode.tt
@@ -9,6 +9,8 @@ namespace <#= component.Namespace #>
     {
 <#@ include file="Templates/Snippets/ComponentIndex.txt" #>
 
+<#@ include file="Templates/Snippets/ComponentAction.txt" #>
+
 <#@ include file="Templates/Snippets/ComponentConstructors.txt" #>
 
 <#@ include file="Templates/Snippets/ComponentAddingCopying.txt" #>
