--- a/Meta/Templates/FlagsPrinter.tt
+++ b/Meta/Templates/FlagsPrinter.tt
@@ -1,4 +1,4 @@
-<#@ template debug="false" hostspecific="true" language="C#" #>
+<#@ template debug="false" hostspecific="true" language="C#" inherits="CodePrinterBase" #>
 <#@ assembly name="Meta" #>
 <#@ include file="Templates/Snippets/autogen_notice.txt" #>
 <#@ include file="Templates/Snippets/GenericUsings.txt" #>
