--- a/Meta/Templates/StatPrinter.tt
+++ b/Meta/Templates/StatPrinter.tt
@@ -1,3 +1,5 @@
+<#@ template debug="false" hostspecific="true" language="C#" inherits="CodePrinterBase" #>
+<#@ assembly name="Meta" #>
 public struct <#= stat.Name #> : IStat
 {
 <# if (!stat.IsIdentifying) { #>
