--- a/Meta/Templates/BehaviorPrinter.tt
+++ b/Meta/Templates/BehaviorPrinter.tt
@@ -6,7 +6,8 @@
 namespace <#= behavior.Namespace #>
 {
     public partial class <#= behavior.ClassName #> : ICopyable
-    {
+    { <# PushIndent("        "); #>
+
 <#@ include file="Templates/Snippets/ComponentIndex.txt" #>
 
 <#@ include file="Templates/Snippets/ComponentAction.txt" #>
@@ -22,10 +23,15 @@ namespace <#= behavior.Namespace #>
 <#@ include file="Templates/Snippets/HandlersFromExportedMethods.txt" #>
 
 <#@ include file="Templates/Snippets/ContributedChains.txt" #>
+<# PopIndent(); #>
+
     }
 
     public static class <#= behavior.ClassName #>EntityExtensions
-    {
+    { <# PushIndent("        "); #>
+
 <#@ include file="Templates/Snippets/BehaviorEntityExtensions.txt" #>
+<# PopIndent(); #>
+
     }
 }
