--- a/Meta/Templates/ComponentPrinter.tt
+++ b/Meta/Templates/ComponentPrinter.tt
@@ -6,7 +6,8 @@
 namespace <#= component.Namespace #>
 {
     public partial class <#= component.ClassName #> : ICopyable
-    {
+    {<# PushIndent("        "); #>
+
 <#@ include file="Templates/Snippets/ComponentIndex.txt" #>
 
 <#@ include file="Templates/Snippets/ComponentAction.txt" #>
@@ -20,10 +21,15 @@ namespace <#= component.Namespace #>
 <#@ include file="Templates/Snippets/HandlersFromExportedMethods.txt" #>
 
 <#@ include file="Templates/Snippets/ContributedChains.txt" #>
+<# PopIndent(); #>
+
     }
 
     public static class <#= component.ClassName #>EntityExtensions
-    {
+    { <# PushIndent("        "); #>
+
 <#@ include file="Templates/Snippets/ComponentEntityExtension.txt" #>
+<# PopIndent(); #>
+
     }
 }
